# maneboi

./: .gitignore  LICENSE  README.md  pyproject.toml
maneboi/: __main__.py  dictionary.py  maneboi.css  maneboi.py
