[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "maneboi"
homepage = "https://github.com/sayandipdutta/maneboi"
version = "0.0.2"
authors = [
  { name="Sayandip Dutta", email="sayandip199309@gmail.com" },
]
description = "Fuzzy search through a database"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "textual[dev] ~=0.24.1",
  "pfzy ~= 0.3.4",
]
