[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "maneboi"
version = "0.0.3"
description = "Fuzzy search through a database"
license = {file = "LICENSE"}
keywords = ["tui", "fuzzy-find"]
authors = [
  { name="Sayandip Dutta", email="sayandip199309@gmail.com" },
]
maintainers = [
  { name="Sayandip Dutta", email="sayandip199309@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "textual[dev] ~=0.24.1",
  "pfzy ~= 0.3.4",
]

[project.scripts]
maneboi = "maneboi.__main__:main"

[project.urls]
homepage = "https://github.com/sayandipdutta/maneboi"
repository = "https://github.com/sayandipdutta/maneboi.git"

[tool.mypy]
python_version = ">=3.10"

[tool.pyright]
venvPath = "/home/sayandip199309/.pyenv/versions/"
venv = "maneboi"
